terraform-stretch-asg/launch_template.tf
resource "aws_launch_template" "notes_app" {
  name_prefix   = "${var.project_name}-lt-"
  image_id      = data.aws_ami.amazon_linux.id
  instance_type = var.instance_type

  iam_instance_profile {
    name = aws_iam_instance_profile.ec2_profile.name
  }

  vpc_security_group_ids = [
    aws_security_group.app.id
  ]

  user_data = base64encode(templatefile("${path.module}/user_data.sh.tpl", {
    bucket_name = aws_s3_bucket.assets.bucket
    app_port    = var.app_port
  }))

  tag_specifications {
    resource_type = "instance"

    tags = {
      Name = "${var.project_name}-app"
    }
  }
}
